DSND-2870: Improve logging and published at timestamp format
* Adds thread local log map to each log message.
* Uses the standardised published_at timestamp format.
* Adds integration test for healthcheck.
* Fixes code smells.